fixed footer for the mobile

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -337,28 +337,38 @@
   </main>
   <footer class="footer__game">
     <div class="footer__game__container">
-      <img class="footer__image" src="./css/images/logo-big.png" alt="logo">
-      <nav class="footer__game__navigation">
-        <ul class="footer__game__list">
-          <li class="footer__game__list--information"><a class="footer__game__link" href="./main">main</a></li>
-          <li class="footer__game__list--information"><a class="footer__game__link" href="#/about">About</a></li>
-          <li class="footer__game__list--information"><a class="footer__game__link" href="./feature">Game features</a></li>
-          <li class="footer__game__list--information"><a class="footer__game__link" href="#/system">System requerement</a></li>
-          <li class="footer__game__list--information"><a class="footer__game__link" href="#/quote">Quotes</a></li>
-        </ul>
-      </nav>
-      <nav class="footer__game__navigation__comunication">
-        <ul class="footer__game__navigation__communication--list">
-          <li class="footer__game__list--communication"><a class="footer__game__facebook_link facebook" href="/facebook">facebook</a></li>
-          <li class="footer__game__list--communication"><a class="footer__game__twitter_link twitter" href="/twitter">Twitter</a></li>
-          <li class="footer__game__list--communication"><a class="footer__game__vector_link vector" href="/vectore">vectore</a></li>
-          <li class="footer__game__list--communication"><a class="footer__game__message_link message" href="/message">message</a></li>
-        </ul>
-      </nav>
+      <div class="footer__game__image__container">
+        <img class="footer__image" src="./css/images/logo-big.png" alt="logo">
+      </div>
+      <div class="footer__link__container">
+        <nav class="footer__game__navigation">
+          <ul class="footer__game__list">
+            <li class="footer__game__list--information"><a class="footer__game__link" href="./main">main</a></li>
+            <li class="footer__game__list--information"><a class="footer__game__link" href="#/about">About</a></li>
+            <li class="footer__game__list--information"><a class="footer__game__link" href="./feature">Game features</a>
+            </li>
+            <li class="footer__game__list--information"><a class="footer__game__link" href="#/system">System
+                requerement</a></li>
+            <li class="footer__game__list--information"><a class="footer__game__link" href="#/quote">Quotes</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__game__navigation__comunication">
+          <ul class="footer__game__navigation__communication--list">
+            <li class="footer__game__list--communication facebook"><a class="footer__game__link facebook_anchore"
+                href="/facebook">facebook</a></li>
+            <li class="footer__game__list--communication twitter"><a class="footer__game__link twitter_anchore"
+                href="/twitter">Twitter</a></li>
+            <li class="footer__game__list--communication vector"><a class="footer__game__link vectore_anchore "
+                href="/vectore">vectore</a></li>
+            <li class="footer__game__list--communication message"><a class="footer__game__link message_anchore"
+                href="/message">message</a></li>
+          </ul>
+        </nav>
+      </div>
       <p class="footer__game__paragraph">
         © 2018 Outpost Games, Inc. All Rights Reserved
       </p>
-      <nav class="footer__game__navigation__security" >
+      <nav class="footer__game__navigation__security">
         <ul class="footer__game__lists__of__security">
           <li class="footer__game__list__security">
             <a class="footer__game__link__security" href="/privacy">Privacy Policy</a>
