Fixed the button

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -330,7 +330,9 @@
             <input type="email" id="email" pattern=".+@gmail.com" value="Your email address aliciliniavopir@gmail.com"
               required>
           </form>
-          <button>Subscribe now</button>
+          <div class="button__container">
+          <button class="game__button__subscribe">Subscribe now</button>
+          </div>
         </div>
       </div>
     </section>
