Fixed the fith section

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -326,10 +326,12 @@
             taken care
             of by us. We will send you emails containing information about game. We don’t spam.
           </p>
-          <form>
+          <div class="game__form">
+          <form >
             <input type="email" id="email" pattern=".+@gmail.com" value="Your email address aliciliniavopir@gmail.com"
               required>
           </form>
+          </div>
           <div class="button__container">
           <button class="game__button__subscribe">Subscribe now</button>
           </div>
