fixed the input email

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -328,7 +328,8 @@
           </p>
           <div class="game__form">
           <form >
-            <input type="email" id="email" pattern=".+@gmail.com" value="Your email address aliciliniavopir@gmail.com"
+            <label for="email" class="game__label">Your email address</label>
+            <input type="email" id="email" pattern=".+@gmail.com" value="aliciliniavopir@gmail.com"
               required>
           </form>
           </div>
