Fixed the destop in fourth section

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -252,18 +252,20 @@
       </div>
     </section>
     <section class="game__fourth__section">
-      <h1 class="game__fourth__section--header">
-        What people think?
-      </h1>
-      <h2 class="game__fourth__section--subheader">Press quotes</h2>
-      <p class="game__fourth__section--paragraph">
-        Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re
-        constantly working on our services to make it better every day and really listen to what our users has to say.
-      </p>
-      <div class="button">
-        <button class="game__fourth__section--button">
-          Read more testemonial
-        </button>
+      <div class="game__fourth__secton__information">
+        <h1 class="game__fourth__section--header">
+          What people think?
+        </h1>
+        <h2 class="game__fourth__section--subheader">Press quotes</h2>
+        <p class="game__fourth__section--paragraph">
+          Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re
+          constantly working on our services to make it better every day and really listen to what our users has to say.
+        </p>
+        <div class="button">
+          <button class="game__fourth__section--button">
+            Read more testemonial
+          </button>
+        </div>
       </div>
       <div class="game__fourth__section__about--container">
         <article class="game__fourth__section__aboutperson lahti">
@@ -327,14 +329,13 @@
             of by us. We will send you emails containing information about game. We don’t spam.
           </p>
           <div class="game__form">
-          <form >
-            <label for="email" class="game__label">Your email address</label>
-            <input type="email" id="email" pattern=".+@gmail.com" value="aliciliniavopir@gmail.com"
-              required>
-          </form>
+            <form>
+              <label for="email" class="game__label">Your email address</label>
+              <input type="email" id="email" pattern=".+@gmail.com" value="aliciliniavopir@gmail.com" required>
+            </form>
           </div>
           <div class="button__container">
-          <button class="game__button__subscribe">Subscribe now</button>
+            <button class="game__button__subscribe">Subscribe now</button>
           </div>
         </div>
       </div>
