--- a/webroot/index.html
+++ b/webroot/index.html
@@ -316,26 +316,28 @@
     <section class="game__fith__section">
       <div class="fith__container">
         <div class="game__fith">
-          <h2 class="game__fith__section--header">
-            Want to stay in touch?
-          </h2>
-          <h3 class="game__fith__section--subheader">
-            newsletter subscribe
-          </h3>
-          <p class="game__fith__section--paragraph">
-            In order to start receiving our news, all you have to do is enter your email address. Everything else will
-            be
-            taken care
-            of by us. We will send you emails containing information about game. We don’t spam.
-          </p>
-          <div class="game__form">
-            <form>
-              <label for="email" class="game__label">Your email address</label>
-              <input type="email" id="email" pattern=".+@gmail.com" value="aliciliniavopir@gmail.com" required>
+          <div class="game__fith__information">
+            <h2 class="game__fith__section--header">
+              Want to stay in touch?
+            </h2>
+            <h3 class="game__fith__section--subheader">
+              newsletter subscribe
+            </h3>
+            <p class="game__fith__section--paragraph">
+              In order to start receiving our news, all you have to do is enter your email address. Everything else will
+              be
+              taken care
+              of by us. We will send you emails containing information about game. We don’t spam.
+            </p>
+            <form class="game__fith__form">
+              <div class="game__email">
+                <label for="email" class="game__label">Your email address</label>
+                <input type="email" id="email" pattern=".+@gmail.com" value="aliciliniavopir@gmail.com" required>
+              </div>
+              <div class="button__container">
+                <button class="game__button__subscribe">Subscribe now</button>
+              </div>
             </form>
-          </div>
-          <div class="button__container">
-            <button class="game__button__subscribe">Subscribe now</button>
           </div>
         </div>
       </div>
