Fixed the desctop footer

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -351,13 +351,16 @@
       <div class="footer__link__container">
         <nav class="footer__game__navigation">
           <ul class="footer__game__list">
-            <li class="footer__game__list--information"><a class="footer__game__link" href="./main">main</a></li>
-            <li class="footer__game__list--information"><a class="footer__game__link" href="#/about">About</a></li>
-            <li class="footer__game__list--information"><a class="footer__game__link" href="./feature">Game features</a>
+            <li class="footer__game__list--information main"><a class="footer__game__link1" href="./main">main</a></li>
+            <li class="footer__game__list--information about"><a class="footer__game__link1" href="#/about">About</a>
             </li>
-            <li class="footer__game__list--information"><a class="footer__game__link" href="#/system">System
+            <li class="footer__game__list--information feature"><a class="footer__game__link1" href="./feature">Game
+                features</a>
+            </li>
+            <li class="footer__game__list--information system"><a class="footer__game__link1" href="#/system">System
                 requerement</a></li>
-            <li class="footer__game__list--information"><a class="footer__game__link" href="#/quote">Quotes</a></li>
+            <li class="footer__game__list--information quote"><a class="footer__game__link1" href="#/quote">Quotes</a>
+            </li>
           </ul>
         </nav>
         <nav class="footer__game__navigation__comunication">
@@ -373,6 +376,8 @@
           </ul>
         </nav>
       </div>
+    </div>
+    <div class="footer__game__container2">
       <p class="footer__game__paragraph">
         © 2018 Outpost Games, Inc. All Rights Reserved
       </p>
