--- a/webroot/index.html
+++ b/webroot/index.html
@@ -44,8 +44,8 @@
           <option value="deu"> DEU </option>
         </select>
       </div>
-      <div class="bar"><img class="bar-image" src="./css/images/bar.png" alt="bar-icon"></div>
-      <svg class="bar-icon" width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="bar"></div>
+      <svg class="game__menu" width="33" height="26" viewBox="0 0 33 26" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g filter="url(#filter0_d)">
           <rect x="13.9985" y="15.5166" width="13.585" height="1.5" rx="0.75" fill="white" stroke="black" />
           <rect x="5.09619" y="8.01657" width="22.4873" height="1.5" rx="0.75" fill="white" stroke="black" />
@@ -64,7 +64,6 @@
           </filter>
         </defs>
       </svg>
-
       <div class="game__box__union">
         <a href="/box" class="game__icone">
           <svg class="game-icon1" width="31" height="31" viewBox="0 0 31 31" fill="none"
