--- a/webroot/index.html
+++ b/webroot/index.html
@@ -127,8 +127,9 @@
         </div>
         <div class="game__first__section--paragraph">
           <p class="game__first__section__paragraph--detail">
-            Each round, you and 15 other contestants compete to
-            escape a deadly island filled with monsters. The trick is: three people can survive. Will you run
+            Each round, <span> you </span> and <span>15</span> other contestants compete to
+            escape a deadly island filled with monsters. The trick is: <span>three</span> people can survive. Will you
+            run
             solo or form friendships with others to escape?
           </p>
           <p class="game__first__section__paragraph--detail">
@@ -154,37 +155,39 @@
           <h3 class=" game__second__section__header--title">Features</h3>
           <p class="game__second__section__header--info">What's so special?</p>
         </header>
-        <ul class="game__second__section__navigation">
-          <li class="game__second__section__navigation--list">
-            <details class="game__second__section__detail">
-              <summary class="game__second__section__summary">Survive at all costs</summary>
-              <p>You have 30 minutes to find a relic, signal for extraction, and grab
-                one of three spots on the rescue chopper.</p>
-            </details>
-          </li>
-          <li class="game__second__section__navigation--list">
-            <details class="game__second__section__detail">
-              <summary class="game__second__section__summary">Create allies and enemies</summary>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, impedit nam, reiciendis
-                commodi
-                itaque cupiditate minima inventore molestiae voluptatum ad, dolor quia ea accusantium nesciunt? Sequi,
-                itaque.
-                Quidem, natus.
-              </p>
-            </details>
-          </li>
-          <li class="game__second__section__navigation--list">
-            <details class="game__second__section__detail">
-              <summary class="game__second__section__summary">Impress your audience</summary>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis, qui modi, ratione ea saepe eum
-                iure
-                officiis iusto mollitia nihil unde odio, possimus quo consectetur praesentium harum nesciunt illum?
-              </p>
-            </details>
-          </li>
-        </ul>
+        <div class="game__second__section--navigation">
+          <ul class="game__second__section__navigation">
+            <li class="game__second__section__navigation--list">
+              <details class="game__second__section__detail">
+                <summary class="game__second__section__summary">Survive at all costs</summary>
+                <p>You have 30 minutes to find a relic, signal for extraction, and grab
+                  one of three spots on the rescue chopper.</p>
+              </details>
+            </li>
+            <li class="game__second__section__navigation--list">
+              <details class="game__second__section__detail">
+                <summary class="game__second__section__summary">Create allies and enemies</summary>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere repudiandae, impedit nam, reiciendis
+                  commodi
+                  itaque cupiditate minima inventore molestiae voluptatum ad, dolor quia ea accusantium nesciunt? Sequi,
+                  itaque.
+                  Quidem, natus.
+                </p>
+              </details>
+            </li>
+            <li class="game__second__section__navigation--list">
+              <details class="game__second__section__detail">
+                <summary class="game__second__section__summary">Impress your audience</summary>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis, qui modi, ratione ea saepe eum
+                  iure
+                  officiis iusto mollitia nihil unde odio, possimus quo consectetur praesentium harum nesciunt illum?
+                </p>
+              </details>
+            </li>
+          </ul>
+        </div>
       </article>
     </section>
     </section>
